Fixed alignement objectives

--- a/docs/examples/scrolling-nav/css/scrolling-nav.css
+++ b/docs/examples/scrolling-nav/css/scrolling-nav.css
@@ -82,7 +82,7 @@ html {
   width: 120px;
   float: left;
   padding: 15px 15px;
-  background:url(../images/logos/hand-short-text.png) no-repeat top -10px left 0;
+  background:url(../images/logos/hand-short-text.png) no-repeat top 0px left 0;
   background-size:100px;
 }
 .navbar-brand-logo.scrolled:hover,
@@ -207,6 +207,19 @@ html {
   font-weight: 300;
   color: #666666;
   text-align: left;
+}
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
+
+.img-center {
+  width:100%;
+  display: block;
+  margin: 0 auto;
+  vertical-align: middle;
 }
 
 .row-principle{
